--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -34,96 +34,10 @@ $weekdays-headings-height: 2.8em;
     }
   }
 
-  // Header.
+  // Calendar body.
   //==================================//
-  &__menu {
-    padding: 0;
-    list-style-type: none;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.02);
-
-    li {
-      padding: 0.3em 1em;
-      height: 2.2em;
-      font-size: 1.3em;
-      border-bottom: 0 solid currentColor;
-      cursor: pointer;
-      box-sizing: border-box;
-      transition: 0.2s;
-    }
-
-    li.active {
-      border-bottom-width: 2px;
-      background: rgba(255, 255, 255, 0.15);
-    }
-  }
-
-  &__title {
-    background-color: rgba(0, 0, 0, 0.1);
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: space-between;
-    font-size: 1.4em;
-    line-height: 1.3;
-    min-height: 2em;
+  &__body {
     position: relative;
-
-    .vuecal--xsmall & {font-size: 1.3em;}
-  }
-
-  &__arrow {
-    cursor: pointer;
-    position: relative;
-    z-index: 1;
-
-    &--prev {padding-left: 0.6em;}
-    &--next {padding-right: 0.6em;}
-
-    i.angle {
-      display: inline-block;
-      border: solid currentColor;
-      border-width: 0 2px 2px 0;
-      padding: 0.25em;
-      transform: rotate(-45deg);
-    }
-
-    &--prev i.angle {border-width: 2px 0 0 2px;}
-  }
-
-  &__weekdays-headings {
-    border-bottom: 1px solid #ddd;
-    margin-bottom: -1px;
-
-    .vuecal--view-with-time & {
-      padding-left: $time-column-width;
-    }
-
-    .vuecal--view-with-time.vuecal--time-12-hour & {
-      font-size: 0.9em;
-      padding-left: $time-column-width-12;
-    }
-
-    .vuecal--split-days.vuecal--view-with-time & {
-      padding-left: 0;
-    }
-  }
-
-  &__heading {
-    width: 100%;
-    height: $weekdays-headings-height;
-    font-weight: 400;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    position: relative;
-
-    .vuecal--small & span:nth-child(3) {display: none;}
-
-    .vuecal--xsmall & {flex-direction: column;padding-left: 0;padding-right: 0;}
-    .vuecal--xsmall & span:nth-child(2),
-    .vuecal--xsmall & span:nth-child(3),
-    .vuecal--xsmall & span:nth-child(4) {display: none;}
   }
 
   &__all-day {
@@ -141,18 +55,16 @@ $weekdays-headings-height: 2.8em;
       justify-content: flex-end;
       border-bottom: 1px solid #ddd;
 
-      span {font-size: 0.85em;}
+      span {
+        font-size: 0.85em;
+        text-align: right;
+        line-height: 1.1;
+      }
     }
     .vuecal--time-12-hour & > span {
       width: $time-column-width-12;
       min-width: $time-column-width-12;
     }
-  }
-
-  // Calendar body.
-  //==================================//
-  &__body {
-    position: relative;
   }
 
   &__bg {
@@ -161,16 +73,13 @@ $weekdays-headings-height: 2.8em;
     -webkit-overflow-scrolling: touch;
     min-height: 60px;
     position: relative;
-    // display: block;
     width: 100%;
     margin-bottom: 1px;
-    // overflow: hidden;
   }
 
   &--no-time &__bg {
     display: flex;
     flex: 1 1 auto;
-    // display: block;
     overflow: visible;
   }
 
