[#40] Update "All day" translation for de & zh-cn and add Hyphens.

--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -54,6 +54,7 @@ $weekdays-headings-height: 2.8em;
       align-items: center;
       justify-content: flex-end;
       border-bottom: 1px solid #ddd;
+      hyphens: auto;
 
       span {
         font-size: 0.85em;
