[#74] Fix calendar body not scrollable.

--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -38,6 +38,7 @@ $weekdays-headings-height: 2.8em;
   //==================================//
   &__body {
     position: relative;
+    overflow: auto;
   }
 
   &__all-day {
