--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -95,8 +95,9 @@ $weekdays-headings-height: 2.8em;
       font-size: 0.9em;
     }
 
-    .vuecal--split-days.vuecal--week-view & {
+    .vuecal--overflow-x.vuecal--week-view & {
       margin-top: $weekdays-headings-height;
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
     }
 
     .vuecal__time-cell {
@@ -120,7 +121,7 @@ $weekdays-headings-height: 2.8em;
   &__cells {
     margin: 0 1px 1px 0;
 
-    .vuecal--split-days.vuecal--week-view & {
+    .vuecal--overflow-x.vuecal--week-view & {
       flex-wrap: nowrap;
       overflow: auto;
     }
