Hide scrollbar while changing views on firefox.

--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -52,7 +52,7 @@ $weekdays-headings-height-with-splits: 3.4em;
   //==================================//
   &__body {
     position: relative;
-    overflow: auto;
+    overflow: hidden;
   }
 
   &__all-day {
