--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -2,6 +2,7 @@ $time-column-width: 3em;
 $time-column-width-12: 4em; // twelve-hour clock shows am/pm.
 $weekdays-headings-height: 2.8em;
 $weekdays-headings-height-with-splits: 3.4em;
+$splits-headers-height: 1.5em;
 
 .vuecal {
   height: 100%;
@@ -47,6 +48,8 @@ $weekdays-headings-height-with-splits: 3.4em;
     .vuecal--day-view.vuecal--twelve-hour:not(.vuecal--overflow-x) & {margin-left: $time-column-width-12;}
 
     .day-split-header {display: flex;flex-grow: 1;justify-content: center;}
+
+    .vuecal--day-view.vuecal--overflow-x.vuecal--sticky-split-labels .day-split-header {height: $splits-headers-height;}
   }
 
   // Calendar body.
@@ -115,10 +118,10 @@ $weekdays-headings-height-with-splits: 3.4em;
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
     }
 
-    .vuecal--overflow-x.vuecal--week-view.vuecal--sticky-split-labels &,
-    .vuecal--overflow-x.vuecal--day-view.vuecal--sticky-split-labels & {
+    .vuecal--overflow-x.vuecal--week-view.vuecal--sticky-split-labels & {
       margin-top: $weekdays-headings-height-with-splits;
     }
+    .vuecal--overflow-x.vuecal--day-view.vuecal--sticky-split-labels & {margin-top: $splits-headers-height;}
 
     .vuecal__time-cell {
       color: #999;
@@ -140,6 +143,8 @@ $weekdays-headings-height-with-splits: 3.4em;
   //==================================//
   &__cells {
     margin: 0 1px 1px 0;
+    .vuecal--overflow-x.vuecal--day-view & {margin: 0;}
+
     .vuecal--events-on-month-view.vuecal--short-events & {width: 99.9%;}
 
     .vuecal--overflow-x.vuecal--day-view &,
