--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -1,5 +1,5 @@
 $time-column-width: 3em;
-$weeks-column-width: 3em;
+$week-numbers-width: 3em;
 $time-column-width-12: 4em; // twelve-hour clock shows am/pm.
 $weekdays-headings-height: 2.8em;
 $weekdays-headings-height-with-splits: 3.4em;
@@ -45,7 +45,7 @@ $splits-headers-height: 1.5em;
   &__split-days-headers {
     &.slide-fade--right-leave-active {display: none;}
 
-    .vuecal--has-weeks-column.vuecal--month-view & {margin-left: $weeks-column-width;}
+    .vuecal--week-numbers.vuecal--month-view & {margin-left: $week-numbers-width;}
     .vuecal--day-view:not(.vuecal--overflow-x) & {margin-left: $time-column-width;height: 2.2em;}
     .vuecal--day-view.vuecal--twelve-hour:not(.vuecal--overflow-x) & {margin-left: $time-column-width-12;}
 
@@ -105,11 +105,12 @@ $splits-headers-height: 1.5em;
     overflow: visible;
   }
 
-  &__weeks-column {
-    width: $weeks-column-width;
+  &__week-numbers {
+    width: $week-numbers-width;
     flex-shrink: 0 !important;
 
     .vuecal__week-number-cell {
+      opacity: 0.4;
       font-size: 0.9em;
       align-items: center;
       justify-items: center;
