Separate dragging & resizing classes on wrapper.

--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -16,7 +16,13 @@ $splits-headers-height: 1.5em;
   //==================================//
   .clickable {cursor: pointer;}
 
-  &--dragging-event {cursor: ns-resize;}
+  &--resizing-event {cursor: ns-resize;}
+  &--dragging-event {
+    cursor: move;
+    cursor: -webkit-grabbing;
+    cursor: grabbing;
+  }
+
   .dragging-helper {
     position: absolute;
     width: 60px;
