Support drag over today button, cleanup.

--- a/src/components/vue-cal/styles.scss
+++ b/src/components/vue-cal/styles.scss
@@ -218,20 +218,22 @@ $splits-headers-height: 1.5em;
   .vuecal__cell--selected:before {border-color: rgba(66, 185, 131, 0.5);}
   .vuecal__cell--highlighted:not(.vuecal__cell--has-splits),
   .vuecal__cell-split--highlighted {background-color: rgba(195, 255, 225, 0.5);}
-  .vuecal__arrow.vuecal__arrow--highlighted,
-  .vuecal__view-btn.vuecal__view-btn--highlighted {background-color: rgba(136, 236, 191, 0.25);}
+  .vuecal__arrow--highlighted,
+  .vuecal__today-btn--highlighted,
+  .vuecal__view-btn--highlighted {background-color: rgba(136, 236, 191, 0.25);}
 }
 
 .vuecal--blue-theme {
   .vuecal__menu, .vuecal__cell-events-count {background-color: rgba(66, 163, 185, 0.8);color: #fff;}
   .vuecal__title-bar {background-color: rgba(0, 165, 188, 0.3);}
   .vuecal__cell--today, .vuecal__cell--current {background-color: rgba(240, 240, 255, 0.4);}
-  &:not(.vuecal--day-view) vuecal__cell--selected {background-color: rgba(235, 253, 255, 0.4);}
+  &:not(.vuecal--day-view) .vuecal__cell--selected {background-color: rgba(235, 253, 255, 0.4);}
   .vuecal__cell--selected:before {border-color: rgba(115, 191, 204, 0.5);}
   .vuecal__cell--highlighted:not(.vuecal__cell--has-splits),
   .vuecal__cell-split--highlighted {background-color: rgba(0, 165, 188, 0.06);}
-  .vuecal__arrow.vuecal__arrow--highlighted,
-  .vuecal__view-btn.vuecal__view-btn--highlighted {background-color: rgba(66, 163, 185, 0.2);}
+  .vuecal__arrow--highlighted,
+  .vuecal__today-btn--highlighted,
+  .vuecal__view-btn--highlighted {background-color: rgba(66, 163, 185, 0.2);}
 }
 
 // Rounded cells.
