Refactor the documentation using Wave UI.

--- a/src/documentation/scss/examples.scss
+++ b/src/documentation/scss/examples.scss
@@ -138,7 +138,7 @@ $primary: #42b983;
     height: auto;
     padding: 1px 8px;
   }
-  .v-btn--floating.v-btn--small {width: 26px;height: 26px;background-color: transparent !important;}
+  .w-button {width: 26px;height: 26px;background-color: transparent !important;}
 }
 
 // Split days example.
