--- a/src/scss/documentation.scss
+++ b/src/scss/documentation.scss
@@ -1,4 +1,10 @@
 .documentation {
+  ul {
+    margin-left: 16px;
+
+    &.no-bullet {list-style-type: none;}
+  }
+
   h2:not(.todo) {
     font-size: 27px !important;
     border-bottom: 1px solid #eee;
@@ -14,11 +20,29 @@
   }
 
   h3 a {
-    font-size: 26px;
+    font-size: 24px;
     font-weight: normal;
     color: #888 !important;
 
     .w-icon {vertical-align: middle;}
+  }
+
+  .examples {
+    h3 {
+      position: relative;
+      margin-bottom: 40px;
+      padding-bottom: 12px;
+    }
+    h3:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      max-width: 400px;
+      width: 100%;
+      height: 4px;
+      background: linear-gradient(45deg, #00bd7e69, transparent);
+    }
   }
 
   h4 {margin: 70px 0 8px;}
@@ -40,6 +64,7 @@
 
   .code {font-family: monospace, sans-serif;}
   span.code {color: black;}
+  .ssh-pre {font-size: 13px;}
 
   .important-notes {
     font-weight: normal;
@@ -54,9 +79,14 @@
 
   .example {
     max-width: 800px;
-    height: 650px;
-    overflow: hidden;
-    border-radius: 5px;
+    height: 600px;
+
+    &.grow {max-width: none;}
+
+    .vuecal {
+      overflow: hidden;
+      border-radius: 6px;
+    }
 
     > .w-card__content {
       padding: 0;
@@ -67,7 +97,8 @@
 
 // Yellow theme.
 .vuecal--yellow-theme {
-  .vuecal__menu, .vuecal__cell-events-count {background-color: rgba(255, 179, 0, 0.8);color: #fff;}
+  .vuecal__menu, .vuecal__cell-events-count {background-color: rgba(255, 179, 0, 0.8);}
+  .vuecal__menu {color: #fff;}
   .vuecal__title-bar {background-color: rgba(255, 236, 202, 0.5);}
   .vuecal__cell--today, .vuecal__cell--current {background-color: rgba(240, 240, 255, 0.4);}
   &:not(.vuecal--day-view) .vuecal__cell--selected {background-color: rgba(255, 236, 202, 0.4);}
