--- a/src/scss/examples.scss
+++ b/src/scss/examples.scss
@@ -1,5 +1,3 @@
-$primary: #42b983;
-
 .vuecal__event--dragging {
   background-color: rgba(grey, 0.3) !important;
   border: none !important;
@@ -79,12 +77,14 @@ $primary: #42b983;
 
 // Events on month view example.
 .event-indicator--dash .vuecal__cell-events-count {
-  width: 18px;
+  top: 70%;
+  width: 14px;
   height: 2px;
   color: transparent;
 }
 
 .event-indicator--dot .vuecal__cell-events-count {
+  top: 70%;
   width: 4px;
   min-width: 0;
   height: 4px;
