Improve the documentation UI.

--- a/src/scss/documentation.scss
+++ b/src/scss/documentation.scss
@@ -2,7 +2,7 @@
   ul {
     margin-left: 16px;
 
-    &.w-list {margin-left: 0;}
+    &.w-list, &.pl0 {margin-left: 0;}
     &.no-bullet {list-style-type: none;}
   }
 
