--- a/src/scss/examples.scss
+++ b/src/scss/examples.scss
@@ -240,3 +240,5 @@
   .vuecal__body .split3 {background-color: rgba(255, 243, 224, 0.7);}
   .vuecal__body .split4 {background-color: rgba(255, 235, 238, 0.7);}
 }
+
+.logs-box {white-space: pre-wrap;}
