Improve the documentation UI.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -3,6 +3,8 @@
 // --------------------------------------------------------
 * {margin: 0;padding: 0;}
 
+html {scroll-behavior: smooth;}
+
 .w-app {
   font: 14px 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
