--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -5,6 +5,8 @@
 
 html {scroll-behavior: smooth;}
 
+#app {overflow-x: hidden;}
+
 .w-app {
   font: 14px 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
