Update the documentation.

--- a/src/scss/examples.scss
+++ b/src/scss/examples.scss
@@ -246,7 +246,7 @@
 // Media queries.
 // --------------------------------------------------------
 @media screen and (max-width: 800px) {
-  .ex--custom-day-split-labels .day-split-header .w-icon {display: none;}
+  .vuecal--week-view.ex--custom-day-split-labels .day-split-header .w-icon {display: none;}
   .ex--custom-day-split-labels .day-split-header strong {
     overflow: hidden;
     width: 0.9em;
