--- a/src/vue-cal/styles.scss
+++ b/src/vue-cal/styles.scss
@@ -38,7 +38,7 @@ $splits-headers-height: 1.5em;
     // transition: 0.2s transform;
   }
 
-  &--xsmall {font-size: 0.9em;}
+  &--xs {font-size: 0.9em;}
 
   &__flex {
     display: flex;
