--- a/src/scss/documentation.scss
+++ b/src/scss/documentation.scss
@@ -127,6 +127,26 @@
 .pale-blue {color: #1471b8;}
 .w-app .vuecal-blue--bg {background-color: rgba(66, 163, 185, 0.8);}
 
+// Dark theme.
+// --------------------------------------------------------
+:root[data-theme="dark"] {
+  .top-bar {
+    background-color: #2222227a;
+    border-bottom: none;
+  }
+
+  .w-app .amber {color: #ffd865;}
+  .w-app .deep-orange {color: #ff9c65;}
+
+  .documentation h2:not(.todo) {border-bottom-color: #383838;}
+  .message-box:after {opacity: 0.15;}
+  .message-box.pink {color: #ffa9c6;}
+  .message-box.important-notes {
+    color: #eec965;
+    background-color: rgba(255, 225, 62, 0.07);
+  }
+}
+
 // Media queries.
 // --------------------------------------------------------
 @media screen and (max-width: 499px) {
