--- a/src/scss/documentation.scss
+++ b/src/scss/documentation.scss
@@ -145,6 +145,7 @@
     color: #eec965;
     background-color: rgba(255, 225, 62, 0.07);
   }
+  .message-box.pale-blue {color: #65bcff;}
 }
 
 // Media queries.
